gpu-workload/t5/kubernetes/loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  labels:
    app: loadgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      volumes:
        - name: locustfile
          configMap:
            name: loadgenerator-files
      containers:
        - name: loadgenerator
          image: locustio/locust
          command: ["locust", "--autostart"]
          volumeMounts:
            - mountPath: /home/locust
              name: locustfile
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "512Mi"
              cpu: "250m"
              ephemeral-storage: "1Gi"
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8080
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: loadgenerator
spec:
  type: ClusterIP
  selector:
    app: loadgenerator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
