gpu-workload/t5/kubernetes/serving-cpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torchserve
  labels:
    app: torchserve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torchserve
  template:
    metadata:
      labels:
        app: torchserve
    spec:
      containers:
        - name: main
          image: gcr.io/GOOGLE_CLOUD_PROJECT/models/MODEL_NAME:MODEL_VERSION-$MACHINE
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "2000m"
              memory: 7Gi
              ephemeral-storage: 10Gi
            requests:
              cpu: "2000m"
              memory: 7Gi
              ephemeral-storage: 10Gi
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: grpc
            - containerPort: 8082
              name: metrics
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 32
            periodSeconds: 8
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 60

---
apiVersion: v1
kind: Service
metadata:
  name: torchserve
  labels:
    app: torchserve
spec:
  type: ClusterIP
  selector:
    app: torchserve
  ports:
    - port: 8080
      name: http
      targetPort: http
    - port: 8081
      name: grpc
      targetPort: grpc
    - port: 8082
      name: metrics
      targetPort: metrics
